--- a/src/Components/Form/Form.scss
+++ b/src/Components/Form/Form.scss
@@ -4,11 +4,8 @@
   width: 500px;
 
   &__label {
-
-    &:not(:first-of-type) {
-      display: block;
-      margin-top: $defaultMargin;
-    }
+    display: block;
+    position: relative;
   }
 
   &__input {
@@ -36,6 +33,10 @@
   }
 
   &__input-error {
+    position: absolute;
+    top: 8px;
+
+    font-size: 16px;
     color: $main;
   }
 
